[Fix] Reformat code

--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -6,12 +6,9 @@
 <head>
     <title>@title</title>
     <link rel="stylesheet" href='@routes.WebJarAssets.at(WebJarAssets.locate("css/bootstrap.min.css"))'>
-    <link rel="stylesheet" media="screen" href="@routes.Assets.at(" stylesheets
-    /main.css")">
-    <link rel="shortcut icon" type="image/png" href="@routes.Assets.at(" images
-    /favicon.png")">
-    <script src="@routes.Assets.at(" javascripts
-    /jquery-1.9.0.min.js")" type="text/javascript"></script>
+    <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
+    <link rel="shortcut icon" type="image/png" href="@routes.Assets.at(" images/favicon.png")">
+    <script src="@routes.Assets.at("javascripts/jquery-1.9.0.min.js")" type="text/javascript"></script>
     </head>
     <body>
         <!--@content-->
@@ -42,7 +39,7 @@
 
                     <div class="mastfoot">
                         <div class="inner">
-                            <p>&#064; 2014 BookStorem. See entire project on  <a href="https://github.com/lvarayut/Bookstore">Github</a>.</p>
+                            <p>&#064; 2014 BookStore. See entire project on  <a href="https://github.com/lvarayut/Bookstore">Github</a>.</p>
                         </div>
                     </div>
 
