--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -1,4 +1,4 @@
-@(title: String)(content: Html)
+@(title: String)
 
 <!DOCTYPE html>
 
@@ -11,7 +11,6 @@
     <script src="@routes.Assets.at("javascripts/jquery-1.9.0.min.js")" type="text/javascript"></script>
     </head>
     <body>
-        <!--@content-->
         <div class="site-wrapper">
 
             <div class="site-wrapper-inner">
@@ -23,7 +22,7 @@
                             <h3 class="masthead-brand">BookStore</h3>
                             <ul class="nav masthead-nav">
                                 <li class="active"><a href="#">Home</a></li>
-                                <li><a href="#">Lists</a></li>
+                                <li><a href="@routes.Application.bookList()">Lists</a></li>
                                 <li><a href="#">Contact</a></li>
                             </ul>
                         </div>
