--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -6,11 +6,15 @@
 <head>
     <title>@title</title>
     <link rel="stylesheet" href='@routes.WebJarAssets.at(WebJarAssets.locate("css/bootstrap.min.css"))'>
-    <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
-    <link rel="shortcut icon" type="image/png" href="@routes.Assets.at(" images/favicon.png")">
-    <script src="@routes.Assets.at("javascripts/jquery-1.9.0.min.js")" type="text/javascript"></script>
+    <link rel="stylesheet" media="screen" href="@routes.Assets.at(" stylesheets
+    /main.css")">
+    <link rel="shortcut icon" type="image/png" href="@routes.Assets.at(" images
+    /favicon.png")">
+    <script src="@routes.Assets.at(" javascripts
+    /jquery-1.9.0.min.js")" type="text/javascript"></script>
     </head>
     <body>
+        <p class="navbar-text navbar-right">Signed in as Mark Otto</p>
         <div class="site-wrapper">
 
             <div class="site-wrapper-inner">
