--- a/app/views/navbar.scala.html
+++ b/app/views/navbar.scala.html
@@ -1,2 +1,2 @@
-@(user: User)
-<p class="navbar-text navbar-right">Signed in as @user.getName() (balance:@user.getAccount().getBalance()) </p>
+@*@(user: User)*@
+@*<p class="navbar-text navbar-right">Signed in as @user.getName() (balance:@user.getAccount().getBalance()) </p>*@
