--- a/app/views/introduction/introduction.scala.html
+++ b/app/views/introduction/introduction.scala.html
@@ -1,6 +1,4 @@
-@base() {
-    <a class="navbar-text pull-right btn btn-md btn-success">Sign in</a>
-}(){
+@base()()(){
 <div id="introduction">
     <div id="signup-section" class="section">
         @signUp()
