--- a/app/views/introduction/signUp.scala.html
+++ b/app/views/introduction/signUp.scala.html
@@ -1,10 +1,13 @@
+<div class="container">
+    <a class="navbar-text pull-right btn btn-md btn-success navbar-head-btn" href="#" role="button"">Sign in</a>
+</div>
 <div class="intro-form-container">
     <div class="intro-form-wrapper">
-        <div class="intro-form-title">
+        <div class="signup-form-title">
             <h1>Welcome to BookStore!</h1>
             <h4>Bookstore has various kinds of books available for you.</h4>
         </div>
-        <form class="intro-form-signup" role="form" method="POST" action="">
+        <form class="signup-form-signup" role="form" method="POST" action="">
             <input type="email" name="email" class="form-control" placeholder="Email address" required="" autofocus="">
             <input type="password" name="password" class="form-control" placeholder="Password" required="">
             <input type="text" name="username" class="form-control" placeholder="Username" required="">
