[Add] Play-authenticate plugin [Add] Sign-up by using Google provider [Add] Bootstrap-social and Font Awesome

--- a/app/views/base.scala.html
+++ b/app/views/base.scala.html
@@ -12,6 +12,8 @@
     @*CSS *@
     <link rel="stylesheet" href='@routes.WebJarAssets.at(WebJarAssets.locate("css/bootstrap.min.css"))'>
     <link rel="stylesheet" href='@routes.Assets.at("stylesheets/jquery.fullPage.css")'>
+    <link rel="stylesheet" href='@routes.Assets.at("stylesheets/font-awesome.min.css")'>
+    <link rel="stylesheet" href='@routes.Assets.at("stylesheets/bootstrap-social.css")'>
     <link rel="stylesheet" href='@routes.Assets.at("stylesheets/bookstore.css")'>
     <link rel="shortcut icon" type="image/png" href='@routes.Assets.at("images/favicon.png")'>
 
