--- a/app/views/introduction/signUp.scala.html
+++ b/app/views/introduction/signUp.scala.html
@@ -1,5 +1,11 @@
+@import com.feth.play.module.pa.views.html._
 <div class="container">
-    <a class="navbar-text pull-right btn btn-md btn-success navbar-head-btn" href="#" role="button"">Sign in</a>
+    <a class="navbar-text pull-right btn btn-md btn-success navbar-head-btn" href="#" role="button">Sign in</a>
+    @currentAuth() { auth =>
+        @if(auth != null) {
+            <a href="@com.feth.play.module.pa.controllers.routes.Authenticate.logout">Logout</a>
+        }
+    }
 </div>
 <div class="intro-form-container">
     <div class="intro-form-wrapper">
@@ -12,6 +18,14 @@
             <input type="password" name="password" class="form-control" placeholder="Password" required="">
             <input type="text" name="username" class="form-control" placeholder="Username" required="">
             <button class="btn btn-lg btn-primary btn-block" type="submit" style="margin-top: 5px;">Sign up</button>
+            <div>
+                <h5>or sign up using one of the following providers:</h5>
+                @forProviders() { p =>
+                    <a class="btn btn-social btn-google-plus" href="@p.getUrl()"><i class="fa fa-google-plus"></i>Sign in with @p.getKey()</a>
+                }
+            </div>
         </form>
     </div>
+
 </div>
+
