--- a/app/views/introduction/signUp.scala.html
+++ b/app/views/introduction/signUp.scala.html
@@ -7,8 +7,8 @@
         }
     }
 </div>
-<div class="intro-form-container">
-    <div class="intro-form-wrapper">
+<div class="intro-container">
+    <div class="intro-wrapper">
         <div class="signup-form-title">
             <h1>Welcome to BookStore!</h1>
             <h4>Bookstore has various kinds of books available for you.</h4>
@@ -18,13 +18,16 @@
             <input type="password" name="password" class="form-control" placeholder="Password" required="">
             <input type="text" name="username" class="form-control" placeholder="Username" required="">
             <button class="btn btn-lg btn-primary btn-block" type="submit" style="margin-top: 5px;">Sign up</button>
-            <div>
-                <h5>or sign up using one of the following providers:</h5>
-                @forProviders() { p =>
-                    <a class="btn btn-social btn-google-plus" href="@p.getUrl()"><i class="fa fa-google-plus"></i>Sign in with @p.getKey()</a>
-                }
-            </div>
         </form>
+        <div class="signup-provider">
+            <hr>
+            <h5>Or sign up with one of these accounts?</h5>
+            @forProviders() { p =>
+                <a class="btn btn-social-icon btn-google-plus" href="@p.getUrl()"><i class="fa fa-google-plus"></i></a>
+                <a class="btn btn-social-icon btn-facebook"><i class="fa fa-facebook"></i></a>
+                <a class="btn btn-social-icon btn-twitter"><i class="fa fa-twitter"></i></a>
+            }
+        </div>
     </div>
 
 </div>
