--- a/app/views/introduction/signUp.scala.html
+++ b/app/views/introduction/signUp.scala.html
@@ -7,7 +7,7 @@
             <h1>Welcome to BookStore!</h1>
             <h4>Bookstore has various kinds of books available for you.</h4>
         </div>
-        <form class="signup-form-signup" role="form" method="POST" action="@routes.Introduction.signUp()">
+        <form class="signup-form-signup" role="form" method="POST" action="">
             <input type="email" name="email" class="form-control" placeholder="Email address" required="">
             <input type="password" name="password" class="form-control" placeholder="Password" required="">
             <input type="text" name="username" class="form-control" placeholder="Username" required="">
@@ -16,9 +16,9 @@
         <div class="signup-provider">
             <hr>
             <h5>Or sign up with one of these accounts?</h5>
-                <a class="btn btn-social-icon btn-google-plus" href=""><i class="fa fa-google-plus"></i></a>
-                <a class="btn btn-social-icon btn-facebook"><i class="fa fa-facebook"></i></a>
-                <a class="btn btn-social-icon btn-twitter"><i class="fa fa-twitter"></i></a>
+            <a class="btn btn-social-icon btn-google-plus" href="/authenticate/google"><i class="fa fa-google-plus"></i></a>
+            <a class="btn btn-social-icon btn-facebook" href="/authenticate/facebook"><i class="fa fa-facebook"></i></a>
+            <a class="btn btn-social-icon btn-twitter" href="/authenticate/twitter"><i class="fa fa-twitter"></i></a>
 
         </div>
     </div>
