[Add] Sign up dropdown

--- a/app/views/introduction/navbarHead.scala.html
+++ b/app/views/introduction/navbarHead.scala.html
@@ -1,5 +1,4 @@
 <div class="container">
-    <a class="navbar-text pull-right btn btn-md btn-success navbar-head-btn" href="#" role="button">Sign in</a>
-    @*Link to the first page of the introduction. The route returns slash *@
+    @signInButton()
     <a class="navbar-text pull-right btn btn-md btn-primary navbar-head-btn" href="@routes.Introduction.introduction()#sign-up" role="button">Sign up</a>
 </div>
