--- a/public/stylesheets/bookstore.css
+++ b/public/stylesheets/bookstore.css
@@ -33,6 +33,22 @@
 }
 
 /*
+ * Sign in
+ */
+
+.left-inner-addon {
+    position: relative;
+}
+.left-inner-addon input {
+    padding-left: 30px;
+}
+.left-inner-addon i {
+    position: absolute;
+    padding: 10px 12px;
+    pointer-events: none;
+}
+
+/*
  * Navbar head
 */
 
