--- a/app/views/introduction/signUp.scala.html
+++ b/app/views/introduction/signUp.scala.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <a class="navbar-text pull-right btn btn-md btn-success navbar-head-btn" href="#" role="button">Sign in</a>
+    @signInButton()
 </div>
 <div class="intro-container">
     <div class="intro-wrapper">
@@ -19,7 +19,6 @@
             <a class="btn btn-social-icon btn-google-plus" href="/authenticate/google"><i class="fa fa-google-plus"></i></a>
             <a class="btn btn-social-icon btn-facebook" href="/authenticate/facebook"><i class="fa fa-facebook"></i></a>
             <a class="btn btn-social-icon btn-twitter" href="/authenticate/twitter"><i class="fa fa-twitter"></i></a>
-
         </div>
     </div>
 </div>
