[Add] Credit for background photos

--- a/app/views/introduction/showCase.scala.html
+++ b/app/views/introduction/showCase.scala.html
@@ -1,12 +1,12 @@
 @navbarHead()
 
 <div class="intro-form-container">
-    <div class="intro-form-wrapper">
+    <div class="intro-form-wrapper row">
         <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
             <img src="http://www.clipartbest.com/cliparts/KTn/EgA/KTnEgAxTq.png" height="500px" width="500px">
         </div>
         <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
-
         </div>
     </div>
 </div>
+@footer("MIKI Yoshihito","https://flic.kr/p/aC4AWW")
