[Fix] Customs templates

--- a/app/views/base.scala.html
+++ b/app/views/base.scala.html
@@ -30,7 +30,7 @@
         <div class="navbar navbar-fixed-top" role="navigation">
             <div class="container">
                 <div class="navbar-header">
-                    <a class="navbar-brand" href="#">BookStore</a>
+                    <a class="navbar-brand" href="@routes.Introduction.introduction()">BookStore</a>
                 </div>
             </div>
             @navbarHead
