--- a/app/views/custom/main.scala.html
+++ b/app/views/custom/main.scala.html
@@ -15,12 +15,12 @@
         <div class="navbar navbar-fixed-top">
             <div class="navbar-inner">
                 <div class="container">
-                    <span class="brand" >@Messages("securesocial.appName")</span>
+                    <span class="brand" >BookStore</span>
                 </div>
             </div>
         </div>
 
-        <div class="container" style="padding-top:30px">
+        <div class="container" style="padding-top:40px">
             @content
         </div>
     </body>
