--- a/app/views/custom/Registration/startResetPassword.scala.html
+++ b/app/views/custom/Registration/startResetPassword.scala.html
@@ -3,7 +3,7 @@
 @import securesocial.core.IdentityProvider
 @implicitFieldConstructor = @{ FieldConstructor(securesocial.views.html.inputFieldConstructor.f) }
 
-@securesocial.views.html.main( Messages("securesocial.password.title") ) {
+@views.html.custom.main( Messages("securesocial.password.title") ) {
     <div class="page-header">
         <h1>@Messages("securesocial.password.title")</h1>
     </div>
