--- a/app/views/custom/main.scala.html
+++ b/app/views/custom/main.scala.html
@@ -15,7 +15,7 @@
         <div class="navbar navbar-fixed-top">
             <div class="navbar-inner">
                 <div class="container">
-                    <span class="brand" >BookStore</span>
+                    <a class="brand" href="@routes.Introduction.introduction()">BookStore</a>
                 </div>
             </div>
         </div>
