--- a/app/views/custom/mails/passwordResetEmail.scala.html
+++ b/app/views/custom/mails/passwordResetEmail.scala.html
@@ -7,6 +7,8 @@
 <p>Please follow this
     <a href="@securesocial.core.providers.utils.RoutesHelper.resetPassword(token).absoluteURL(IdentityProvider.sslEnabled)(request)">
     link</a> to reset your password.
+    <p>Best regards,</p>
+    <p>BookStore</p>
 </p>
 </body>
 </html>
