--- a/app/views/custom/mails/passwordChangedNotice.scala.html
+++ b/app/views/custom/mails/passwordChangedNotice.scala.html
@@ -6,6 +6,9 @@
 <p>Hello @user.firstName,</p>
 
 <p>Your password was updated.  Please log in using your new password by clicking
-    <a href="@securesocial.core.providers.utils.RoutesHelper.login.absoluteURL(IdentityProvider.sslEnabled)(request)">here</a></p>
+    <a href="@securesocial.core.providers.utils.RoutesHelper.login.absoluteURL(IdentityProvider.sslEnabled)(request)">here</a>.</p>
+    <p>Best regards,</p>
+    <p>BookStore</p>
+
 </body>
 </html>
