--- a/app/views/custom/mails/signUpEmail.scala.html
+++ b/app/views/custom/mails/signUpEmail.scala.html
@@ -7,5 +7,7 @@
 <p>Please follow this
     <a href="@securesocial.core.providers.utils.RoutesHelper.signUp(token).absoluteURL(IdentityProvider.sslEnabled)(request)">link</a> to complete your registration.
 </p>
+    <p>Best regards,</p>
+    <p>BookStore</p>
 </body>
 </html>
