--- a/app/views/custom/mails/unknownEmailNotice.scala.html
+++ b/app/views/custom/mails/unknownEmailNotice.scala.html
@@ -11,5 +11,7 @@
     If you never created an account with us ignore this email, otherwise if you think you have an account with us contact
     tech support for further assistance.
 </p>
+    <p>Best regards,</p>
+    <p>BookStore</p>
 </body>
 </html>
