--- a/app/views/custom/mails/welcomeEmail.scala.html
+++ b/app/views/custom/mails/welcomeEmail.scala.html
@@ -6,6 +6,8 @@
 
 <p>
     Your new account is ready.
-    Click <a href="@securesocial.core.providers.utils.RoutesHelper.login.absoluteURL(IdentityProvider.sslEnabled)(request)">here</a> to log in</p>
+    Click <a href="@securesocial.core.providers.utils.RoutesHelper.login.absoluteURL(IdentityProvider.sslEnabled)(request)">here</a> to log in.</p>
+    <p>Best regards,</p>
+    <p>BookStore</p>
 </body>
 </html>
