--- a/app/views/introduction/introduction.scala.html
+++ b/app/views/introduction/introduction.scala.html
@@ -1,4 +1,12 @@
-@base()()(){
+@base() {
+    <div class="navbar navbar-fixed-top intro-navbar-brand" role="navigation">
+        <div class="container">
+            <div class="navbar-header">
+                <a class="navbar-brand intro-navbar-brand" href="@routes.Introduction.introduction()">BookStore</a>
+            </div>
+        </div>
+    </div>
+}{
 <div id="introduction">
     <div id="signup-section" class="section">
         @signUp()
