--- a/app/views/introduction/signInButton.scala.html
+++ b/app/views/introduction/signInButton.scala.html
@@ -1,6 +1,6 @@
-<ul class="nav pull-right navbar-head-btn navbar-text">
+<ul class="nav pull-right intro-navbar-head-btn navbar-text">
     <li class="dropdown">
-        <a class="dropdown-toggle btn btn-md btn-success navbar-head-btn" data-toggle="dropdown" href="#" role="button" style="background-color: #47a447; padding: 6px 12px;">Sign in</a>
+        <a class="dropdown-toggle btn btn-md btn-success intro-navbar-head-btn" data-toggle="dropdown" href="#" role="button" style="background-color: #47a447; padding: 6px 12px;">Sign in</a>
         <div class="dropdown-menu dropdown-menu-right" style="padding:17px;">
             <h4>Sign in</h4>
             <form class="form" style="width: 200px;">
