[Add] Index page [Modify] Base template by adding the javascript variable

--- a/app/views/introduction/introduction.scala.html
+++ b/app/views/introduction/introduction.scala.html
@@ -18,4 +18,7 @@
         @contactUs()
     </div>
 </div>
-}()
+}(){
+<script src='@routes.Assets.at("javascripts/jquery.fullPage.min.js")'></script>
+<script src='@routes.Assets.at("javascripts/jquery.easings.min.js")'></script>
+}
