--- a/app/views/base.scala.html
+++ b/app/views/base.scala.html
@@ -1,4 +1,4 @@
-@(title: String = "BookStore")(navbarMenu:Html = Html.empty)(content: Html = Html.empty)(footer:Html = Html.empty)
+@(title: String = "BookStore")(navbarMenu:Html = Html.empty)(content: Html = Html.empty)(footer:Html = Html.empty)(javascript:Html = Html.empty)
 
 <!DOCTYPE html>
 
@@ -71,8 +71,7 @@
         <!-- Javascript -->
         <script src='@routes.Assets.at("javascripts/jquery-1.11.0.min.js")'></script>
         <script src='@routes.WebJarAssets.at(WebJarAssets.locate("js/bootstrap.min.js"))'></script>
-        <script src='@routes.Assets.at("javascripts/jquery.fullPage.min.js")'></script>
-        <script src='@routes.Assets.at("javascripts/jquery.easings.min.js")'></script>
         <script src='@routes.Assets.at("javascripts/bookstore.js")'></script>
+        @javascript
     </body>
 </html>
