--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,22 +1,43 @@
-@base() {
-    <div class="navbar navbar-default navbar-static-top" role="navigation">
+@base("BookStore: Online shopping"){
+    <div class="navbar navbar-default" role="navigation">
         <div class="container">
             <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
                 <a class="navbar-brand" href="#">BookStore</a>
             </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav navbar-right">
-                    <li><a href="#">LVarayut</a></li>
-                </ul>
-            </div><!--/.nav-collapse -->
+            <ul class="nav navbar-nav navbar-right">
+                <li>
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="glyphicon glyphicon-bell"></i></a>
+                    <ul class="dropdown-menu">
+                        <li><a href="#">Notify1</a></li>
+                        <li><a href="#">Notify2</a></li>
+                    </ul>
+                </li>
+                <li>
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="glyphicon glyphicon-shopping-cart"></i></a>
+                    <ul class="dropdown-menu">
+                        <li><a href="#">Item1</a></li>
+                        <li><a href="#">Item2</a></li>
+                    </ul>
+                </li>
+                <li>
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">LVarayut <i class="fa fa-caret-down"></i></a>
+                    <ul class="dropdown-menu">
+                        <li><a href="#">Setting</a></li>
+                        <li><a href="#">Watchlist</a> </li>
+                        <li><a href="#">History</a></li>
+                        <li><a href="@securesocial.controllers.LoginPage.logout()">Logout</a></li>
+                    </ul>
+                </li>
+            </ul>
         </div>
     </div>
 } {
 
+}{
+    <hr>
+    <div class="container">
+        <p>&#064; 2014 BookStore. Made by Varayut Lerdkanlayanawat. Follow the entire project on
+            <a href="https://github.com/lvarayut/Bookstore" style="color:#000;"><i class="fa fa-github"></i></a>
+        </p>
+    </div>
 }()
