--- a/app/views/introduction/signInButton.scala.html
+++ b/app/views/introduction/signInButton.scala.html
@@ -3,7 +3,7 @@
         <a class="dropdown-toggle btn btn-md btn-success intro-navbar-head-btn" data-toggle="dropdown" href="#" role="button" style="background-color: #47a447; padding: 6px 12px;">Sign in</a>
         <div class="dropdown-menu dropdown-menu-right" style="padding:17px;">
             <h4>Sign in</h4>
-            <form class="form" style="width: 200px;">
+            <form class="form" style="width: 200px;" action="@securesocial.controllers.routes.LoginPage.login()">
                 <div class="left-inner-addon ">
                     <i class="glyphicon glyphicon-envelope"></i><input type="email" name="email" class="form-control" placeholder="Email" required="">
                 </div>
