--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,43 +1,93 @@
-@base("BookStore: Online shopping"){
-    <div class="navbar navbar-default" role="navigation">
+@base("BookStore: Online shopping") {
+    @*Navbar*@
+    <div class="navbar navbar-default navbar-static-top" role="navigation">
         <div class="container">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
             <div class="navbar-header">
                 <a class="navbar-brand" href="#">BookStore</a>
             </div>
-            <ul class="nav navbar-nav navbar-right">
-                <li>
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="glyphicon glyphicon-bell"></i></a>
-                    <ul class="dropdown-menu">
-                        <li><a href="#">Notify1</a></li>
-                        <li><a href="#">Notify2</a></li>
-                    </ul>
-                </li>
-                <li>
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="glyphicon glyphicon-shopping-cart"></i></a>
-                    <ul class="dropdown-menu">
-                        <li><a href="#">Item1</a></li>
-                        <li><a href="#">Item2</a></li>
-                    </ul>
-                </li>
-                <li>
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">LVarayut <i class="fa fa-caret-down"></i></a>
-                    <ul class="dropdown-menu">
-                        <li><a href="#">Setting</a></li>
-                        <li><a href="#">Watchlist</a> </li>
-                        <li><a href="#">History</a></li>
-                        <li><a href="@securesocial.controllers.LoginPage.logout()">Logout</a></li>
-                    </ul>
-                </li>
-            </ul>
+            <div class="navbar-collapse collapse">
+                <ul class="nav navbar-nav navbar-right">
+                    <li>                    <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="glyphicon glyphicon-bell"></i></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="#">Notify1</a></li>
+                            <li><a href="#">Notify2</a></li>
+                        </ul>
+                    </li>
+                    <li>
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="glyphicon glyphicon-shopping-cart"></i></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="#">Item1</a></li>
+                            <li><a href="#">Item2</a></li>
+                        </ul>
+                    </li>
+                    <li>
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                            LVarayut <i class="fa fa-caret-down"></i></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="#">Setting</a></li>
+                            <li><a href="#">Watchlist</a> </li>
+                            <li><a href="#">History</a></li>
+                            <li><a href="@securesocial.controllers.routes.LoginPage.logout()">Logout</a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </div>
         </div>
     </div>
 } {
+    @*Search bar*@
+    <div class="container">
+        <div class="row" style="text-align : center">
+            <form class="form-inline" role="form" style="">
+                <div class="form-group">
+                    <div class="btn-group">
+                        <button type="button" class="btn btn-default  dropdown-toggle" data-toggle="dropdown">
+                            Categories <span class="caret"></span></button>
+                        <ul class="dropdown-menu" role="menu">
+                            <li><a href="#">Computer</a></li>
+                            <li class="divider"></li>
+                            <li><a href="#">Fiction</a></li>
+                            <li class="divider"></li>
+                            <li><a href="#">History</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <input type="text" name="search" class="form-control " placeholder="Book name, Author, ISBN" required="" style="width :600px;">
+                </div>
+                <button class="btn btn-md btn-primary " type="submit">
+                    Search  <i class="glyphicon glyphicon-search"></i></button>
+            </form>
+        </div>
+        @*Content*@
+        <div class="row">
+            @*Left sidebar filters*@
+            <div class="sidebar col-xs-12 col-sm-2 col-md-2">
+                <h5>New Release</h5>
+                <ul class="list-unstyled">
+                    <li><i class="glyphicon glyphicon-minus"></i><a href="#"> Last month</a></li>
+                    <li><i class="glyphicon glyphicon-minus"></i><a href="#"> Last 3 months</a></li>
+                    <li><i class="glyphicon glyphicon-minus"></i><a href="#"> Last 6 months</a></li>
+                </ul>
+            </div>
+            @*Book panel*@
+            <div class="col-xs-12 col-sm-10 col-md-10">
 
-}{
+            </div>
+        </div>
+    </div>
+} {
+    @*Footer*@
     <hr>
     <div class="container">
         <p>&#064; 2014 BookStore. Made by Varayut Lerdkanlayanawat. Follow the entire project on
-            <a href="https://github.com/lvarayut/Bookstore" style="color:#000;"><i class="fa fa-github"></i></a>
+            <a href="https://github.com/lvarayut/Bookstore" style="color : #000 ;"><i class="fa fa-github"></i></a>
         </p>
     </div>
 }()
