--- a/app/views/introduction/introduction.scala.html
+++ b/app/views/introduction/introduction.scala.html
@@ -19,6 +19,7 @@
     </div>
 </div>
 }(){
+<script src='@routes.Assets.at("javascripts/jquery.fullPage.custom.js")'></script>
 <script src='@routes.Assets.at("javascripts/jquery.fullPage.min.js")'></script>
 <script src='@routes.Assets.at("javascripts/jquery.easings.min.js")'></script>
 }
