--- a/app/views/introduction/signUp.scala.html
+++ b/app/views/introduction/signUp.scala.html
@@ -7,7 +7,7 @@
             <h1>Welcome to BookStore!</h1>
             <h4>Bookstore has various kinds of books available for you.</h4>
         </div>
-        <form class="signup-form-signup" role="form" method="POST" action="">
+        <form class="signup-form-signup" role="form" method="POST" action="@securesocial.controllers.routes.Registration.startSignUp()">
             <input type="email" name="email" class="form-control" placeholder="Email address" required="">
             <input type="password" name="password" class="form-control" placeholder="Password" required="">
             <input type="text" name="username" class="form-control" placeholder="Username" required="">
