--- a/app/views/introduction/signUp.scala.html
+++ b/app/views/introduction/signUp.scala.html
@@ -9,8 +9,8 @@
         </div>
         <form class="signup-form-signup" role="form" method="POST" action="@securesocial.controllers.routes.Registration.startSignUp()">
             <input type="email" name="email" class="form-control" placeholder="Email address" required="">
-            <input type="password" name="password" class="form-control" placeholder="Password" required="">
-            <input type="text" name="username" class="form-control" placeholder="Username" required="">
+            <input type="password" name="password" class="form-control" placeholder="Password" required="" disabled>
+            <input type="text" name="username" class="form-control" placeholder="Username" required="" disabled>
             <button class="btn btn-lg btn-primary btn-block" type="submit" style="margin-top: 5px;">Sign up</button>
         </form>
         <div class="signup-provider">
