--- a/app/views/introduction/signInButton.scala.html
+++ b/app/views/introduction/signInButton.scala.html
@@ -5,10 +5,10 @@
             <h4>Sign in</h4>
             <form class="form" style="width: 200px;" action="@securesocial.controllers.routes.LoginPage.login()">
                 <div class="left-inner-addon ">
-                    <i class="glyphicon glyphicon-envelope"></i><input type="email" name="email" class="form-control" placeholder="Email" required="">
+                    <i class="glyphicon glyphicon-envelope"></i><input type="email" name="email" class="form-control" placeholder="Email" required="" disabled>
                 </div>
                 <div class="left-inner-addon ">
-                    <i class="glyphicon glyphicon-lock"></i><input type="password" name="password" class="form-control" placeholder="Password" required="">
+                    <i class="glyphicon glyphicon-lock"></i><input type="password" name="password" class="form-control" placeholder="Password" required="" disabled>
                 </div>
                 <label class="checkbox" style="font-weight:normal;">
                     <input type="checkbox" value="remember-me"> Remember me
