[Add] Authorization system and Interceptor [Modify] Dropdown menus in Navbar

--- a/app/views/introduction/signInButton.scala.html
+++ b/app/views/introduction/signInButton.scala.html
@@ -22,7 +22,7 @@
                 <a class="btn btn-social-icon btn-xs btn-twitter" href="/authenticate/twitter"><i class="fa fa-twitter"></i></a>
             </div>
             <div>
-                <a class="pull-right" href="#" style="color: #B3B3B3; font-size: 0.8em;">Forgot password?</a>
+                <a class="pull-right" href="@securesocial.controllers.routes.Registration.startResetPassword()" style="color: #B3B3B3; font-size: 0.8em;">Forgot password?</a>
             </div>
         </div>
     </li>
