--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,3 +1,4 @@
+@*@(identity:securesocial.core.Identity)*@
 @base("BookStore: Online shopping") {
     @*Navbar*@
     <div class="navbar navbar-default" role="navigation">
@@ -14,26 +15,26 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav navbar-right">
                     <li>                    <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="glyphicon glyphicon-bell"></i></a>
-                        <ul class="dropdown-menu">
+                        <ul class="dropdown-menu navbar-dropdown-menu">
                             <li><a href="#">Notify1</a></li>
                             <li><a href="#">Notify2</a></li>
                         </ul>
                     </li>
                     <li>
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="glyphicon glyphicon-shopping-cart"></i></a>
-                        <ul class="dropdown-menu">
+                        <ul class="dropdown-menu navbar-dropdown-menu">
                             <li><a href="#">Item1</a></li>
                             <li><a href="#">Item2</a></li>
                         </ul>
                     </li>
                     <li>
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                            LVarayut <i class="fa fa-caret-down"></i></a>
-                        <ul class="dropdown-menu">
-                            <li><a href="#">Setting</a></li>
-                            <li><a href="#">Watchlist</a> </li>
-                            <li><a href="#">History</a></li>
-                            <li><a href="@securesocial.controllers.routes.LoginPage.logout()">Logout</a></li>
+                            Test@*@identity.firstName*@ <i class="fa fa-caret-down"></i></a>
+                        <ul class="dropdown-menu navbar-dropdown-menu">
+                            <li><a href="#"><i class="fa fa-cog"></i> Setting</a></li>
+                            <li><a href="#"><i class="fa fa-star"></i> Watchlist</a> </li>
+                            <li><a href="#"><i class="fa fa-clock-o"></i> History</a></li>
+                            <li><a href="@securesocial.controllers.routes.LoginPage.logout()"><i class="fa fa-sign-out"></i> Logout</a></li>
                         </ul>
                     </li>
                 </ul>
