[Add] View package for main page [Add] Book panel [Modify] Move image from Book into Inventory class

--- a/public/stylesheets/bookstore.css
+++ b/public/stylesheets/bookstore.css
@@ -127,3 +127,11 @@ html{
     text-align: left !important;
     min-width: 100%;
 }
+
+/*
+ * Book panel
+ */
+.star{
+   color:#FCDB03;
+   text-shadow: 0 0 0.1px black;
+}
