[Modify] Main page

--- a/app/views/main/navbar.scala.html
+++ b/app/views/main/navbar.scala.html
@@ -7,7 +7,7 @@
             <span class="icon-bar"></span>
         </button>
         <div class="navbar-header">
-            <a class="navbar-brand" href="#">BookStore</a>
+            <a class="navbar-brand" href="@routes.BookStore.index()">BookStore</a>
         </div>
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right">
