--- a/app/views/main/bookpanel.scala.html
+++ b/app/views/main/bookpanel.scala.html
@@ -6,8 +6,8 @@
                 <div class="caption">
                     <h3>The Book title</h3>
                     <p>Some description: dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-                    <p class="star" style="text-align: center;" ><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-half-empty"></i></p>
-                    <p style="text-align: center; font-size:1.5em;"><i class="fa fa-euro"></i>39<a href="#" class="btn btn-primary" role="button">Buy it <i class="fa fa-shopping-cart"></i></a></p>
+                    <p class="star"><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-half-empty"></i></p>
+                    <p style="text-align: center;"><a href="#" class="btn btn-primary" role="button">Buy it <i class="fa fa-shopping-cart"></i></a></p>
                 </div>
             </div>
         </div>
