--- a/app/views/main/index.scala.html
+++ b/app/views/main/index.scala.html
@@ -5,9 +5,11 @@
 } {
     @*Search bar*@
     <div class="container">
-        @searchbar()
+        <div class="row" style="text-align : center">
+            @searchbar()
+        </div>
         @*Content*@
-        <div class="row">
+        <div class="row" style="margin-top: 20px;">
             @*Left sidebar filters*@
             @sidebar()
             @*Book panel*@
