[Modify] Product/Book models [Add] Global object to insert data fixture [Add] Data fixture - initial-data for Book [Add] Repositories to make the independence between Models and DB code

--- a/app/views/main/index.scala.html
+++ b/app/views/main/index.scala.html
@@ -1,6 +1,7 @@
 @*@(identity:securesocial.core.Identity)*@
 @base("BookStore: Online shopping") {
     @*Navbar*@
+    @*@navbar(identity)*@
     @navbar()
 } {
     @*Search bar*@
