--- a/app/views/main/navbar.scala.html
+++ b/app/views/main/navbar.scala.html
@@ -1,3 +1,4 @@
+@*@(identity:securesocial.core.Identity)*@
 <div class="navbar navbar-default" role="navigation">
     <div class="container">
         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
